@@ -62,7 +62,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * A wrapper filter that filters everything after the first filtered row.  */
+comment|/**  * A wrapper filter that filters everything after the first time false is returned  * from any wrapped filters {@link Filter#filterRowKey(byte[], int, int)},  * {@link Filter#filterKeyValue(org.apache.hadoop.hbase.KeyValue)},  * {@link org.apache.hadoop.hbase.filter.Filter#filterRow()} or   * {@link org.apache.hadoop.hbase.filter.Filter#filterAllRemaining()}.  */
 end_comment
 
 begin_class
@@ -134,40 +134,6 @@ expr_stmt|;
 block|}
 specifier|public
 name|boolean
-name|filterRowKey
-parameter_list|(
-name|byte
-index|[]
-name|buffer
-parameter_list|,
-name|int
-name|offset
-parameter_list|,
-name|int
-name|length
-parameter_list|)
-block|{
-name|changeFAR
-argument_list|(
-name|filter
-operator|.
-name|filterRowKey
-argument_list|(
-name|buffer
-argument_list|,
-name|offset
-argument_list|,
-name|length
-argument_list|)
-argument_list|)
-expr_stmt|;
-return|return
-name|filterAllRemaining
-argument_list|()
-return|;
-block|}
-specifier|public
-name|boolean
 name|filterAllRemaining
 parameter_list|()
 block|{
@@ -182,6 +148,44 @@ name|filter
 operator|.
 name|filterAllRemaining
 argument_list|()
+return|;
+block|}
+specifier|public
+name|boolean
+name|filterRowKey
+parameter_list|(
+name|byte
+index|[]
+name|buffer
+parameter_list|,
+name|int
+name|offset
+parameter_list|,
+name|int
+name|length
+parameter_list|)
+block|{
+name|boolean
+name|value
+init|=
+name|filter
+operator|.
+name|filterRowKey
+argument_list|(
+name|buffer
+argument_list|,
+name|offset
+argument_list|,
+name|length
+argument_list|)
+decl_stmt|;
+name|changeFAR
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+return|return
+name|value
 return|;
 block|}
 specifier|public
@@ -220,8 +224,23 @@ name|boolean
 name|filterRow
 parameter_list|()
 block|{
+name|boolean
+name|filterRow
+init|=
+name|this
+operator|.
+name|filter
+operator|.
+name|filterRow
+argument_list|()
+decl_stmt|;
+name|changeFAR
+argument_list|(
+name|filterRow
+argument_list|)
+expr_stmt|;
 return|return
-literal|false
+name|filterRow
 return|;
 block|}
 specifier|public
