@@ -55,6 +55,30 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|Assert
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -2394,6 +2418,379 @@ literal|6
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Tests the the {@link WhileMatchFilter} works in combination with a    * {@link Filter} that uses the    * {@link PageFilter#filterRow()} method.    *    * See HBASE-2258.    *    * @throws Exception    */
+specifier|public
+name|void
+name|testWhileMatchFilterWithFilterRow
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|int
+name|pageSize
+init|=
+literal|4
+decl_stmt|;
+name|Scan
+name|s
+init|=
+operator|new
+name|Scan
+argument_list|()
+decl_stmt|;
+name|WhileMatchFilter
+name|filter
+init|=
+operator|new
+name|WhileMatchFilter
+argument_list|(
+operator|new
+name|PageFilter
+argument_list|(
+name|pageSize
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|s
+operator|.
+name|setFilter
+argument_list|(
+name|filter
+argument_list|)
+expr_stmt|;
+name|InternalScanner
+name|scanner
+init|=
+name|this
+operator|.
+name|region
+operator|.
+name|getScanner
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+name|int
+name|scannerCounter
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|boolean
+name|isMoreResults
+init|=
+name|scanner
+operator|.
+name|next
+argument_list|(
+operator|new
+name|ArrayList
+argument_list|<
+name|KeyValue
+argument_list|>
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|scannerCounter
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|scannerCounter
+operator|>=
+name|pageSize
+condition|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"The WhileMatchFilter should now filter all remaining"
+argument_list|,
+name|filter
+operator|.
+name|filterAllRemaining
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|isMoreResults
+condition|)
+block|{
+break|break;
+block|}
+block|}
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"The page filter returned more rows than expected"
+argument_list|,
+name|pageSize
+argument_list|,
+name|scannerCounter
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Tests the the {@link WhileMatchFilter} works in combination with a    * {@link Filter} that uses the    * {@link PageFilter#filterRowKey(byte[], int, int)} method.    *    * See HBASE-2258.    *    * @throws Exception    */
+specifier|public
+name|void
+name|testWhileMatchFilterWithFilterRowKey
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Scan
+name|s
+init|=
+operator|new
+name|Scan
+argument_list|()
+decl_stmt|;
+name|String
+name|prefix
+init|=
+literal|"testRowOne"
+decl_stmt|;
+name|WhileMatchFilter
+name|filter
+init|=
+operator|new
+name|WhileMatchFilter
+argument_list|(
+operator|new
+name|PrefixFilter
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|prefix
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|s
+operator|.
+name|setFilter
+argument_list|(
+name|filter
+argument_list|)
+expr_stmt|;
+name|InternalScanner
+name|scanner
+init|=
+name|this
+operator|.
+name|region
+operator|.
+name|getScanner
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|ArrayList
+argument_list|<
+name|KeyValue
+argument_list|>
+name|values
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|KeyValue
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|boolean
+name|isMoreResults
+init|=
+name|scanner
+operator|.
+name|next
+argument_list|(
+name|values
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|isMoreResults
+operator|||
+operator|!
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|values
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getRow
+argument_list|()
+argument_list|)
+operator|.
+name|startsWith
+argument_list|(
+name|prefix
+argument_list|)
+condition|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"The WhileMatchFilter should now filter all remaining"
+argument_list|,
+name|filter
+operator|.
+name|filterAllRemaining
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|isMoreResults
+condition|)
+block|{
+break|break;
+block|}
+block|}
+block|}
+comment|/**    * Tests the the {@link WhileMatchFilter} works in combination with a    * {@link Filter} that uses the    * {@link PageFilter#filterKeyValue(org.apache.hadoop.hbase.KeyValue)} method.    *    * See HBASE-2258.    *    * @throws Exception    */
+specifier|public
+name|void
+name|testWhileMatchFilterWithFilterKeyValue
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Scan
+name|s
+init|=
+operator|new
+name|Scan
+argument_list|()
+decl_stmt|;
+name|WhileMatchFilter
+name|filter
+init|=
+operator|new
+name|WhileMatchFilter
+argument_list|(
+operator|new
+name|SingleColumnValueFilter
+argument_list|(
+name|FAMILIES
+index|[
+literal|0
+index|]
+argument_list|,
+name|QUALIFIERS_ONE
+index|[
+literal|0
+index|]
+argument_list|,
+name|CompareOp
+operator|.
+name|EQUAL
+argument_list|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"foo"
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|s
+operator|.
+name|setFilter
+argument_list|(
+name|filter
+argument_list|)
+expr_stmt|;
+name|InternalScanner
+name|scanner
+init|=
+name|this
+operator|.
+name|region
+operator|.
+name|getScanner
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|ArrayList
+argument_list|<
+name|KeyValue
+argument_list|>
+name|values
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|KeyValue
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|boolean
+name|isMoreResults
+init|=
+name|scanner
+operator|.
+name|next
+argument_list|(
+name|values
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"The WhileMatchFilter should now filter all remaining"
+argument_list|,
+name|filter
+operator|.
+name|filterAllRemaining
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|isMoreResults
+condition|)
+block|{
+break|break;
+block|}
+block|}
 block|}
 specifier|public
 name|void
